idf_component_register(
SRCS "OLEDDisplay.c" 
"OLEDDisplayFonts.c"
 "avantgarde_12.c"
 "avantgarde_24.c"
 "avantgarde_36.c"
 "bookman_12.c"
 "bookman_24.c"
 "bookman_36.c"
 "courier_12.c"
 "courier_24.c"
 "courier_36.c"
 "helvetica_12.c"
 "helvetica_24.c"
 "helvetica_36.c"
 "palatino_12.c"
 "palatino_24.c"
 "palatino_36.c"
 "utopia_12.c"
 "utopia_24.c"
 "utopia_36.c"
 INCLUDE_DIRS ".")
