idf_component_register(
SRCS 
 "avantgarde_12.c"
 "avantgarde_24.c"
 "avantgarde_36.c"
 "bookman_12.c"
 "bookman_24.c"
 "bookman_36.c"
 "courier_12.c"
 "courier_24.c"
 "courier_36.c"
 "palatino_12.c"
 "palatino_24.c"
 "palatino_36.c"
 "utopia_12.c"
 "utopia_24.c"
 "utopia_36.c"
  "avantgarde_book_10.c"
  "avantgarde_book_12.c"
  "avantgarde_book_14.c"
  "avantgarde_book_16.c"
  "avantgarde_book_18.c"
  "avantgarde_book_20.c"
  "avantgarde_book_24.c"
  "avantgarde_book_28.c"
  "avantgarde_book_30.c"
  "avantgarde_book_32.c"
  "avantgarde_book_36.c"
  "avantgarde_bookoblique_10.c"
  "avantgarde_bookoblique_12.c"
  "avantgarde_bookoblique_14.c"
  "avantgarde_bookoblique_16.c"
  "avantgarde_bookoblique_18.c"
  "avantgarde_bookoblique_20.c"
  "avantgarde_bookoblique_24.c"
  "avantgarde_bookoblique_28.c"
  "avantgarde_bookoblique_30.c"
  "avantgarde_bookoblique_32.c"
  "avantgarde_bookoblique_36.c"
  "avantgarde_demi_10.c"
  "avantgarde_demi_12.c"
  "avantgarde_demi_14.c"
  "avantgarde_demi_16.c"
  "avantgarde_demi_18.c"
  "avantgarde_demi_20.c"
  "avantgarde_demi_24.c"
  "avantgarde_demi_28.c"
  "avantgarde_demi_30.c"
  "avantgarde_demi_32.c"
  "avantgarde_demi_36.c"
  "avantgarde_demioblique_10.c"
  "avantgarde_demioblique_12.c"
  "avantgarde_demioblique_14.c"
  "avantgarde_demioblique_16.c"
  "avantgarde_demioblique_18.c"
  "avantgarde_demioblique_20.c"
  "avantgarde_demioblique_24.c"
  "avantgarde_demioblique_28.c"
  "avantgarde_demioblique_30.c"
  "avantgarde_demioblique_32.c"
  "avantgarde_demioblique_36.c"
  "bookman_demi_10.c"
  "bookman_demi_12.c"
  "bookman_demi_14.c"
  "bookman_demi_16.c"
  "bookman_demi_18.c"
  "bookman_demi_20.c"
  "bookman_demi_24.c"
  "bookman_demi_28.c"
  "bookman_demi_30.c"
  "bookman_demi_32.c"
  "bookman_demi_36.c"
  "bookman_demiitalic_10.c"
  "bookman_demiitalic_12.c"
  "bookman_demiitalic_14.c"
  "bookman_demiitalic_16.c"
  "bookman_demiitalic_18.c"
  "bookman_demiitalic_20.c"
  "bookman_demiitalic_24.c"
  "bookman_demiitalic_28.c"
  "bookman_demiitalic_30.c"
  "bookman_demiitalic_32.c"
  "bookman_demiitalic_36.c"
  "bookman_light_10.c"
  "bookman_light_12.c"
  "bookman_light_14.c"
  "bookman_light_16.c"
  "bookman_light_18.c"
  "bookman_light_20.c"
  "bookman_light_24.c"
  "bookman_light_28.c"
  "bookman_light_30.c"
  "bookman_light_32.c"
  "bookman_light_36.c"
  "bookman_lightitalic_10.c"
  "bookman_lightitalic_12.c"
  "bookman_lightitalic_14.c"
  "bookman_lightitalic_16.c"
  "bookman_lightitalic_18.c"
  "bookman_lightitalic_20.c"
  "bookman_lightitalic_24.c"
  "bookman_lightitalic_28.c"
  "bookman_lightitalic_30.c"
  "bookman_lightitalic_32.c"
  "bookman_lightitalic_36.c"
  "courier_bold_10.c"
  "courier_bold_12.c"
  "courier_bold_14.c"
  "courier_bold_16.c"
  "courier_bold_18.c"
  "courier_bold_20.c"
  "courier_bold_24.c"
  "courier_bold_28.c"
  "courier_bold_30.c"
  "courier_bold_32.c"
  "courier_bold_36.c"
  "courier_boldoblique_10.c"
  "courier_boldoblique_12.c"
  "courier_boldoblique_14.c"
  "courier_boldoblique_16.c"
  "courier_boldoblique_18.c"
  "courier_boldoblique_20.c"
  "courier_boldoblique_24.c"
  "courier_boldoblique_28.c"
  "courier_boldoblique_30.c"
  "courier_boldoblique_32.c"
  "courier_boldoblique_36.c"
  "courier_oblique_10.c"
  "courier_oblique_12.c"
  "courier_oblique_14.c"
  "courier_oblique_16.c"
  "courier_oblique_18.c"
  "courier_oblique_20.c"
  "courier_oblique_24.c"
  "courier_oblique_28.c"
  "courier_oblique_30.c"
  "courier_oblique_32.c"
  "courier_oblique_36.c"
  "fixed_10.c"
  "fixed_12.c"
  "fixed_14.c"
  "fixed_16.c"
  "fixed_18.c"
  "fixed_20.c"
  "fixed_24.c"
  "fixed_28.c"
  "fixed_30.c"
  "fixed_32.c"
  "fixed_36.c"
  "helvetica_10.c"
  "helvetica_12.c"
  "helvetica_14.c"
  "helvetica_16.c"
  "helvetica_18.c"
  "helvetica_20.c"
  "helvetica_24.c"
  "helvetica_28.c"
  "helvetica_30.c"
  "helvetica_32.c"
  "helvetica_36.c"
  "helvetica_bold_10.c"
  "helvetica_bold_12.c"
  "helvetica_bold_14.c"
  "helvetica_bold_16.c"
  "helvetica_bold_18.c"
  "helvetica_bold_20.c"
  "helvetica_bold_24.c"
  "helvetica_bold_28.c"
  "helvetica_bold_30.c"
  "helvetica_bold_32.c"
  "helvetica_bold_36.c"
  "helvetica_boldoblique_10.c"
  "helvetica_boldoblique_12.c"
  "helvetica_boldoblique_14.c"
  "helvetica_boldoblique_16.c"
  "helvetica_boldoblique_18.c"
  "helvetica_boldoblique_20.c"
  "helvetica_boldoblique_24.c"
  "helvetica_boldoblique_28.c"
  "helvetica_boldoblique_30.c"
  "helvetica_boldoblique_32.c"
  "helvetica_boldoblique_36.c"
  "helvetica_narrow_10.c"
  "helvetica_narrow_12.c"
  "helvetica_narrow_14.c"
  "helvetica_narrow_16.c"
  "helvetica_narrow_18.c"
  "helvetica_narrow_20.c"
  "helvetica_narrow_24.c"
  "helvetica_narrow_28.c"
  "helvetica_narrow_30.c"
  "helvetica_narrow_32.c"
  "helvetica_narrow_36.c"
  "helvetica_narrow_bold_10.c"
  "helvetica_narrow_bold_12.c"
  "helvetica_narrow_bold_14.c"
  "helvetica_narrow_bold_16.c"
  "helvetica_narrow_bold_18.c"
  "helvetica_narrow_bold_20.c"
  "helvetica_narrow_bold_24.c"
  "helvetica_narrow_bold_28.c"
  "helvetica_narrow_bold_30.c"
  "helvetica_narrow_bold_32.c"
  "helvetica_narrow_bold_36.c"
  "helvetica_narrow_oblique_10.c"
  "helvetica_narrow_oblique_12.c"
  "helvetica_narrow_oblique_14.c"
  "helvetica_narrow_oblique_16.c"
  "helvetica_narrow_oblique_18.c"
  "helvetica_narrow_oblique_20.c"
  "helvetica_narrow_oblique_24.c"
  "helvetica_narrow_oblique_28.c"
  "helvetica_narrow_oblique_30.c"
  "helvetica_narrow_oblique_32.c"
  "helvetica_narrow_oblique_36.c"
  "helvetica_oblique_10.c"
  "helvetica_oblique_12.c"
  "helvetica_oblique_14.c"
  "helvetica_oblique_16.c"
  "helvetica_oblique_18.c"
  "helvetica_oblique_20.c"
  "helvetica_oblique_24.c"
  "helvetica_oblique_28.c"
  "helvetica_oblique_30.c"
  "helvetica_oblique_32.c"
  "helvetica_oblique_36.c"
 INCLUDE_DIRS ".")
